[gd_scene load_steps=4 format=3 uid="uid://ccu3gi61nw6tx"]

[ext_resource type="Script" path="res://scripts/graph_node.gd" id="1_m71op"]
[ext_resource type="Texture2D" uid="uid://d3cp1tf3b1ow6" path="res://sprites/circle.png" id="2_n8tjj"]

[sub_resource type="CircleShape2D" id="CircleShape2D_var20"]
radius = 61.0082

[node name="GraphNode" type="Node2D"]
script = ExtResource("1_m71op")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.1, 0.1)
texture = ExtResource("2_n8tjj")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_var20")

[node name="Label" type="Label" parent="."]
offset_left = -32.0
offset_top = -28.0
offset_right = 32.0
offset_bottom = 27.0
text = "temp"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
